--- a/src/styles/SkillCard.css
+++ b/src/styles/SkillCard.css
@@ -19,12 +19,19 @@
     transform: scale(1.05);
 }
 
+.bdsm-skill-card.selected {
+    border-color: green;
+    box-shadow: 0 0 15px green;
+    transform: scale(1.05);
+}
+
 .skill-image {
     width: 50px;
     height: 50px;
     border-radius: 8px;
     border: 2px solid #7a0019;
     box-shadow: 0 0 10px #7a0019;
+    user-select: none;
 }
 
 .skill-name {
@@ -33,4 +40,5 @@
     color: #7a0019;
     text-transform: uppercase;
     letter-spacing: 2px;
+    user-select: none;
 }
