--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -65,3 +65,11 @@ body, .app, .root {
   flex-wrap: wrap;
   padding: 0 20px;
 }
+
+.mrt-note-result {
+  border: solid thin #7a0019;
+  box-shadow: 0 0 12px #7a0019;
+  padding: 20px;
+  white-space: break-spaces;
+  text-align: left;
+}
